feat: update image path

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <div class="container" id="container">
       <div class="hidden" id="hidden">
-        <img src="/assets/images/icon-list.svg" class="success" />
+        <img src="assets/images/icon-list.svg" class="success" />
         <div class="title">Thanks for <br />Subscribing!</div>
         <p class="confirm">
           A confirmation email has been sent to
@@ -40,17 +40,15 @@
         >
         <ul class="features">
           <li>
-            <img src="/assets/images/icon-list.svg" class="icon-list" />Product
+            <img src="assets/images/icon-list.svg" class="icon-list" />Product
             discovery and building what matters
           </li>
           <li>
-            <img
-              src="/assets/images/icon-list.svg"
-              class="icon-list"
-            />Measuring to ensure updates are a success
+            <img src="assets/images/icon-list.svg" class="icon-list" />Measuring
+            to ensure updates are a success
           </li>
           <li>
-            <img src="/assets/images/icon-list.svg" class="icon-list" />Add much
+            <img src="assets/images/icon-list.svg" class="icon-list" />Add much
             more!
           </li>
         </ul>
